@@ -1,5 +1,9 @@
 2007-08-11  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTTP.pm: Method names in codes were oldies.
+
+2007-08-11  Wakaba  <wakaba@suika.fam.cx>
+
 	* Makefile: New file.
 
 	* HTTP.pm: Reformed for manakai.
